# MagicSquare_08

./: .cursorrules  .gitignore  README.md  pyproject.toml
Prompting/: 1.4x4_magic_square_problem_recognition_prompt.md  2.4x4_magic_square_dual_track_tdd_design_prompt.md  3.cursorrules_project_conventions_prompt.md  3.cursorrules_specification_and_ai_guidelines_prompt.md  4.user_journey_epic_to_technical_scenario_prompt.md  5.prd_authoring_and_document_export_prompt.md  6.readme_backlog_and_environment_report_prompt.md  7.virtual_environment_and_pytest_execution_prompt.md  8.green_branch_gui_mvp_commit_report_prompt.md
Report/: 1.4x4_magic_square_problem_recognition.md  2.4x4_magic_square_dual_track_tdd_design.md  3.cursorrules_project_conventions.md  3.cursorrules_specification_and_ai_guidelines.md  4.user_journey_epic_to_technical_scenario.md  5.prd_authoring_and_document_export.md  6.readme_backlog_and_environment_report.md  7.virtual_environment_and_pytest_execution.md  8.green_branch_gui_mvp_commit_report.md  9.refactoring_readiness_analysis_report.md
docs/: PRD_MagicSquare_4x4_TDD.md  TEST_CASES_DUAL_TRACK_RED.md  TEST_CASES_MagicSquare_4x4.md
magic_square/: __init__.py  prd_messages.py
magic_square/boundary/: __init__.py  api.py  messages.py  validator.py
magic_square/control/: __init__.py  completion.py
magic_square/entity/: __init__.py  constants.py  magic.py  (+1 more)
magicsquare/: __init__.py  boundary.py  constants.py  domain.py
tests/: __init__.py  test_magicsquare_boundary_validate_size.py  test_magicsquare_domain_blank_coords.py  test_tp_scenarios.py
(+3 files in other folders)
